<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".Main_screen">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/app_Title"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:text="@string/app_Title" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_welcome"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="@string/app_welcome" />

    <TextView
        android:id="@+id/textViewEnterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_enterName"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:text="@string/app_enterName" />

    <EditText
        android:id="@+id/editTextEnterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Name"
        android:padding="20dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEnterName"
        android:text="Date"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewGameInfor"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:text="@string/app_information"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:text="@string/app_information" />

    <TextView
        android:id="@+id/textViewD1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_description1"
        android:textAlignment="center"
        android:textSize="12sp"
        tools:text="@string/app_description1" />

    <TextView
        android:id="@+id/textViewD2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_description2"
        android:textAlignment="center"
        android:textSize="12sp"
        tools:text="@string/app_description2" />

    <TextView
        android:id="@+id/textViewEnjoy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/app_enjoy"
        android:textAlignment="center"
        android:textSize="12sp"
        tools:text="@string/app_enjoy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Start" />

    </LinearLayout>
</LinearLayout>